2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-03-04 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DAGraph.iuml
	* src/dgraph/DAGraph.java
	* src/dgraph/DGraph.iuml
	* src/dgraph/DGraph.java
	* src/dgraph/Edge.iuml
	* src/dgraph/Edge.java
	* src/dgraph/Node.java
	* src/lattice/BijectiveComponents.iuml
	* src/lattice/BijectiveComponents.java
	* src/lattice/Lattice.iuml
	* src/lattice/Lattice.java
	* src/lattice/Rule.java
		^ Reorganize uml

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* cite.bib
		^ Move file to doc folder

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Rule.iuml
		^ Change method category

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Rule.java
	* src/lattice/Rule.iuml
		+ Add uml description for Rule

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DAGraph.java
	* src/dgraph/DGraph.java
	* src/dgraph/Edge.java
	* src/dgraph/Node.java
	* src/lattice/BijectiveComponents.java
	* src/lattice/Lattice.java
		^ Describe uml in separate files

2014-02-26 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/Rule.java
		^ Check style
	* test/lattice/RuleTest.java
		+ Add unit test on Rule.java
	* build.xml

2014-02-20 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/BijectiveComponents.java
		^ Translate "DependanceGraphe" to "DependencyGraph"
	* test/lattice/BijectiveComponentsTest.java
		+ Add unit test on BijectiveComponents.java

2014-02-20 Christophe Demko <chdemko@gmail.com>
	* src/lattice/BijectiveComponents.java:
	* examples/Examples.java:
		+ Add uml graph
		^ reformat comments
		^ rename dependance -> dependency
		^ change public setters to protected
