@@ -1,0 +1,14 @@
+class ComparableSet {
+    .. Constructors ..
+    +ComparableSet()
+    +ComparableSet(TreeSet<Comparable> set)
+    .. Transformers ..
+    +String toFile()
+    .. Generators ..
+    +ComparableSet copy()
+    .. Comparators ..
+    +boolean equals(Object object)
+    +int hashCode()
+    +int compareTo(Object object)
+}
+
